ctowasm/src/parser/peggyjs/lexer.js
// @generated by Peggy 4.0.2.
//
// https://peggyjs.org/

"use strict";


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { program: peg$parseprogram };
  var peg$startRuleFunction = peg$parseprogram;

  var peg$c0 = "@";
  var peg$c1 = "#include <";
  var peg$c2 = ">";
  var peg$c3 = "_Static_assert";
  var peg$c4 = "_Thread_local";
  var peg$c5 = "_Imaginary";
  var peg$c6 = "_Noreturn";
  var peg$c7 = "continue";
  var peg$c8 = "register";
  var peg$c9 = "restrict";
  var peg$c10 = "unsigned";
  var peg$c11 = "volatile";
  var peg$c12 = "_Alignas";
  var peg$c13 = "_Alignof";
  var peg$c14 = "_Complex";
  var peg$c15 = "_Generic";
  var peg$c16 = "default";
  var peg$c17 = "typedef";
  var peg$c18 = "_Atomic";
  var peg$c19 = "extern";
  var peg$c20 = "inline";
  var peg$c21 = "double";
  var peg$c22 = "return";
  var peg$c23 = "signed";
  var peg$c24 = "sizeof";
  var peg$c25 = "static";
  var peg$c26 = "struct";
  var peg$c27 = "switch";
  var peg$c28 = "break";
  var peg$c29 = "float";
  var peg$c30 = "const";
  var peg$c31 = "short";
  var peg$c32 = "union";
  var peg$c33 = "while";
  var peg$c34 = "_Bool";
  var peg$c35 = "auto";
  var peg$c36 = "case";
  var peg$c37 = "char";
  var peg$c38 = "goto";
  var peg$c39 = "long";
  var peg$c40 = "else";
  var peg$c41 = "enum";
  var peg$c42 = "void";
  var peg$c43 = "for";
  var peg$c44 = "int";
  var peg$c45 = "if";
  var peg$c46 = "do";
  var peg$c47 = "0";
  var peg$c48 = "0x";
  var peg$c49 = "0X";
  var peg$c50 = "ll";
  var peg$c51 = "LL";
  var peg$c52 = ".";
  var peg$c53 = "'";
  var peg$c54 = "\\'";
  var peg$c55 = "\\\"";
  var peg$c56 = "\\?";
  var peg$c57 = "\\\\";
  var peg$c58 = "\\a";
  var peg$c59 = "\\b";
  var peg$c60 = "\\f";
  var peg$c61 = "\\r";
  var peg$c62 = "\\n";
  var peg$c63 = "\\t";
  var peg$c64 = "\\v";
  var peg$c65 = "\\";
  var peg$c66 = "\\x";
  var peg$c67 = "\"";
  var peg$c68 = "%:%:";
  var peg$c69 = "...";
  var peg$c70 = "<<=";
  var peg$c71 = ">>=";
  var peg$c72 = "++";
  var peg$c73 = "--";
  var peg$c74 = "+=";
  var peg$c75 = "-=";
  var peg$c76 = "*=";
  var peg$c77 = "/=";
  var peg$c78 = "%=";
  var peg$c79 = "&=";
  var peg$c80 = "^=";
  var peg$c81 = "|=";
  var peg$c82 = "==";
  var peg$c83 = "!=";
  var peg$c84 = "<=";
  var peg$c85 = ">=";
  var peg$c86 = ">>";
  var peg$c87 = "<<";
  var peg$c88 = "->";
  var peg$c89 = "&&";
  var peg$c90 = "||";
  var peg$c91 = "##";
  var peg$c92 = "%:";
  var peg$c93 = "<:";
  var peg$c94 = ":>";
  var peg$c95 = "<%";
  var peg$c96 = "%>";

  var peg$r0 = /^[ \t\n\v\f]/;
  var peg$r1 = /^[a-z0-9!"#%&()*+,-.\/: ;<=>?[\]\^_{|}~\t\v\f]/i;
  var peg$r2 = /^[a-z_]/i;
  var peg$r3 = /^[a-z0-9_]/i;
  var peg$r4 = /^[1-9]/;
  var peg$r5 = /^[0-9]/;
  var peg$r6 = /^[0-7]/;
  var peg$r7 = /^[0-9A-F]/i;
  var peg$r8 = /^[Uu]/;
  var peg$r9 = /^[Ll]/;
  var peg$r10 = /^[Ee]/;
  var peg$r11 = /^[+\-]/;
  var peg$r12 = /^[fl]/i;
  var peg$r13 = /^[a-z0-9!'#%&()*+,-.\/: ;<=>?[\]\^_{|}~\t\v\f]/i;
  var peg$r14 = /^[!#%-&(-\/:-?[\]-\^{-~]/;

  var peg$e0 = peg$otherExpectation("separator");
  var peg$e1 = peg$classExpectation([" ", "\t", "\n", "\v", "\f"], false, false);
  var peg$e2 = peg$classExpectation([["a", "z"], ["0", "9"], "!", "\"", "#", "%", "&", "(", ")", "*", "+", [",", "."], "/", ":", " ", ";", "<", "=", ">", "?", "[", "]", "^", "_", "{", "|", "}", "~", "\t", "\v", "\f"], false, true);
  var peg$e3 = peg$literalExpectation("@", false);
  var peg$e4 = peg$classExpectation([["a", "z"], "_"], false, true);
  var peg$e5 = peg$literalExpectation("#include <", false);
  var peg$e6 = peg$literalExpectation(">", false);
  var peg$e7 = peg$literalExpectation("_Static_assert", false);
  var peg$e8 = peg$literalExpectation("_Thread_local", false);
  var peg$e9 = peg$literalExpectation("_Imaginary", false);
  var peg$e10 = peg$literalExpectation("_Noreturn", false);
  var peg$e11 = peg$literalExpectation("continue", false);
  var peg$e12 = peg$literalExpectation("register", false);
  var peg$e13 = peg$literalExpectation("restrict", false);
  var peg$e14 = peg$literalExpectation("unsigned", false);
  var peg$e15 = peg$literalExpectation("volatile", false);
  var peg$e16 = peg$literalExpectation("_Alignas", false);
  var peg$e17 = peg$literalExpectation("_Alignof", false);
  var peg$e18 = peg$literalExpectation("_Complex", false);
  var peg$e19 = peg$literalExpectation("_Generic", false);
  var peg$e20 = peg$literalExpectation("default", false);
  var peg$e21 = peg$literalExpectation("typedef", false);
  var peg$e22 = peg$literalExpectation("_Atomic", false);
  var peg$e23 = peg$literalExpectation("extern", false);
  var peg$e24 = peg$literalExpectation("inline", false);
  var peg$e25 = peg$literalExpectation("double", false);
  var peg$e26 = peg$literalExpectation("return", false);
  var peg$e27 = peg$literalExpectation("signed", false);
  var peg$e28 = peg$literalExpectation("sizeof", false);
  var peg$e29 = peg$literalExpectation("static", false);
  var peg$e30 = peg$literalExpectation("struct", false);
  var peg$e31 = peg$literalExpectation("switch", false);
  var peg$e32 = peg$literalExpectation("break", false);
  var peg$e33 = peg$literalExpectation("float", false);
  var peg$e34 = peg$literalExpectation("const", false);
  var peg$e35 = peg$literalExpectation("short", false);
  var peg$e36 = peg$literalExpectation("union", false);
  var peg$e37 = peg$literalExpectation("while", false);
  var peg$e38 = peg$literalExpectation("_Bool", false);
  var peg$e39 = peg$literalExpectation("auto", false);
  var peg$e40 = peg$literalExpectation("case", false);
  var peg$e41 = peg$literalExpectation("char", false);
  var peg$e42 = peg$literalExpectation("goto", false);
  var peg$e43 = peg$literalExpectation("long", false);
  var peg$e44 = peg$literalExpectation("else", false);
  var peg$e45 = peg$literalExpectation("enum", false);
  var peg$e46 = peg$literalExpectation("void", false);
  var peg$e47 = peg$literalExpectation("for", false);
  var peg$e48 = peg$literalExpectation("int", false);
  var peg$e49 = peg$literalExpectation("if", false);
  var peg$e50 = peg$literalExpectation("do", false);
  var peg$e51 = peg$classExpectation([["a", "z"], ["0", "9"], "_"], false, true);
  var peg$e52 = peg$literalExpectation("0", false);
  var peg$e53 = peg$classExpectation([["1", "9"]], false, false);
  var peg$e54 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e55 = peg$classExpectation([["0", "7"]], false, false);
  var peg$e56 = peg$literalExpectation("0x", false);
  var peg$e57 = peg$literalExpectation("0X", false);
  var peg$e58 = peg$classExpectation([["0", "9"], ["A", "F"]], false, true);
  var peg$e59 = peg$classExpectation(["U", "u"], false, false);
  var peg$e60 = peg$classExpectation(["L", "l"], false, false);
  var peg$e61 = peg$literalExpectation("ll", false);
  var peg$e62 = peg$literalExpectation("LL", false);
  var peg$e63 = peg$literalExpectation(".", false);
  var peg$e64 = peg$classExpectation(["E", "e"], false, false);
  var peg$e65 = peg$classExpectation(["+", "-"], false, false);
  var peg$e66 = peg$classExpectation(["f", "l"], false, true);
  var peg$e67 = peg$literalExpectation("'", false);
  var peg$e68 = peg$literalExpectation("\\'", false);
  var peg$e69 = peg$literalExpectation("\\\"", false);
  var peg$e70 = peg$literalExpectation("\\?", false);
  var peg$e71 = peg$literalExpectation("\\\\", false);
  var peg$e72 = peg$literalExpectation("\\a", false);
  var peg$e73 = peg$literalExpectation("\\b", false);
  var peg$e74 = peg$literalExpectation("\\f", false);
  var peg$e75 = peg$literalExpectation("\\r", false);
  var peg$e76 = peg$literalExpectation("\\n", false);
  var peg$e77 = peg$literalExpectation("\\t", false);
  var peg$e78 = peg$literalExpectation("\\v", false);
  var peg$e79 = peg$literalExpectation("\\", false);
  var peg$e80 = peg$literalExpectation("\\x", false);
  var peg$e81 = peg$literalExpectation("\"", false);
  var peg$e82 = peg$classExpectation([["a", "z"], ["0", "9"], "!", "'", "#", "%", "&", "(", ")", "*", "+", [",", "."], "/", ":", " ", ";", "<", "=", ">", "?", "[", "]", "^", "_", "{", "|", "}", "~", "\t", "\v", "\f"], false, true);
  var peg$e83 = peg$literalExpectation("%:%:", false);
  var peg$e84 = peg$literalExpectation("...", false);
  var peg$e85 = peg$literalExpectation("<<=", false);
  var peg$e86 = peg$literalExpectation(">>=", false);
  var peg$e87 = peg$literalExpectation("++", false);
  var peg$e88 = peg$literalExpectation("--", false);
  var peg$e89 = peg$literalExpectation("+=", false);
  var peg$e90 = peg$literalExpectation("-=", false);
  var peg$e91 = peg$literalExpectation("*=", false);
  var peg$e92 = peg$literalExpectation("/=", false);
  var peg$e93 = peg$literalExpectation("%=", false);
  var peg$e94 = peg$literalExpectation("&=", false);
  var peg$e95 = peg$literalExpectation("^=", false);
  var peg$e96 = peg$literalExpectation("|=", false);
  var peg$e97 = peg$literalExpectation("==", false);
  var peg$e98 = peg$literalExpectation("!=", false);
  var peg$e99 = peg$literalExpectation("<=", false);
  var peg$e100 = peg$literalExpectation(">=", false);
  var peg$e101 = peg$literalExpectation(">>", false);
  var peg$e102 = peg$literalExpectation("<<", false);
  var peg$e103 = peg$literalExpectation("->", false);
  var peg$e104 = peg$literalExpectation("&&", false);
  var peg$e105 = peg$literalExpectation("||", false);
  var peg$e106 = peg$literalExpectation("##", false);
  var peg$e107 = peg$literalExpectation("%:", false);
  var peg$e108 = peg$literalExpectation("<:", false);
  var peg$e109 = peg$literalExpectation(":>", false);
  var peg$e110 = peg$literalExpectation("<%", false);
  var peg$e111 = peg$literalExpectation("%>", false);
  var peg$e112 = peg$classExpectation(["!", "#", ["%", "&"], ["(", "/"], [":", "?"], "[", ["]", "^"], ["{", "~"]], false, false);

  var peg$f0 = function(matches) { return matches.join(""); };
  var peg$f1 = function(token) { addTokenPosition(token); return token + " "; };
  var peg$f2 = function() { return ""; };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$resultsCache = {};

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseprogram() {
    var s0, s1, s2;

    var key = peg$currPos * 36 + 0;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsepreprocess_match();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsepreprocess_match();
    }
    peg$savedPos = s0;
    s1 = peg$f0(s1);
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsepreprocess_match() {
    var s0, s1, s2;

    var key = peg$currPos * 36 + 1;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parsetoken();
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos);
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f1(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parse_();
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f2();
      }
      s0 = s1;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parse_() {
    var s0, s1;

    var key = peg$currPos * 36 + 2;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    peg$silentFails++;
    s0 = [];
    s1 = input.charAt(peg$currPos);
    if (peg$r0.test(s1)) {
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = input.charAt(peg$currPos);
        if (peg$r0.test(s1)) {
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
      }
    } else {
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsesource_character_set() {
    var s0;

    var key = peg$currPos * 36 + 3;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = input.charAt(peg$currPos);
    if (peg$r1.test(s0)) {
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseextended_source_character_set();
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseextended_source_character_set() {
    var s0;

    var key = peg$currPos * 36 + 4;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    if (input.charCodeAt(peg$currPos) === 64) {
      s0 = peg$c0;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsetoken() {
    var s0, s1, s2, s3;

    var key = peg$currPos * 36 + 5;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$parseinclude();
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsekeyword();
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        peg$silentFails++;
        s3 = input.charAt(peg$currPos);
        if (peg$r2.test(s3)) {
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e4); }
        }
        peg$silentFails--;
        if (s3 === peg$FAILED) {
          s2 = undefined;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseidentifier();
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseconstant();
          if (s1 !== peg$FAILED) {
            s2 = peg$currPos;
            peg$silentFails++;
            s3 = input.charAt(peg$currPos);
            if (peg$r2.test(s3)) {
              peg$currPos++;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e4); }
            }
            peg$silentFails--;
            if (s3 === peg$FAILED) {
              s2 = undefined;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
            if (s2 !== peg$FAILED) {
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$parsestring_literal();
            if (s0 === peg$FAILED) {
              s0 = peg$parsepunctuator();
            }
          }
        }
      }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseinclude() {
    var s0, s1, s2, s3;

    var key = peg$currPos * 36 + 6;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 10) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 10;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseidentifier();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 62) {
          s3 = peg$c2;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e6); }
        }
        if (s3 !== peg$FAILED) {
          s1 = [s1, s2, s3];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsekeyword() {
    var s0;

    var key = peg$currPos * 36 + 7;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
